src/objects/Household_Percent__c.object
<CustomObject>
    <fields>
        <fullName>External_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Percents</relationshipLabel>
        <relationshipName>Household_Percents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Household Percent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Household_Account__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Percents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>